--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -18,6 +18,4 @@ jobs:
           meteor-release: 2.4
 
       - name: test package
-        run: |
-          npm ci
-          npm test
+        run: npm test
