--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -18,4 +18,6 @@ jobs:
           meteor-release: 2.4
 
       - name: test package
-        run: npm test
+        run: |
+          npm ci
+          npm test
